<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/purplelight"
        tools:context=".SignupActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/admin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/admin_signup"
            android:layout_gravity="center"
            android:textColor="@color/purple"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_background"
            android:hint="@string/username1"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_background"
            android:hint="@string/email2"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_background"
            android:hint="@string/password2"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:background="@drawable/custom_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_upbtn"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</RelativeLayout>
