<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/purplelight"
    android:gravity="center"
    tools:context=".EditProfileActivity"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:textSize="32dp"
        android:fontFamily="@font/bold"
        />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="121dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/userp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:background="@drawable/custom_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email3"
        android:background="@drawable/custom_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:background="@drawable/custom_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:background="@drawable/custom_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/save_changes"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_background"
        android:textColor="@color/white" />
</LinearLayout>
